--- a/frontend-react-js/src/components/ProfileHeading.css
+++ b/frontend-react-js/src/components/ProfileHeading.css
@@ -2,7 +2,7 @@
     padding-bottom: 0px;
   }
   
-  .profile_heading .avatar {
+  .profile_heading .profile-avatar {
       position: absolute;
       bottom:-74px;
       left: 16px;
